Fix gaps/margins around "how wrong?"

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -43,7 +43,7 @@ a {
   font-size: 24px;
   line-height: 1.4;
 
-  p {
+  section > p {
     margin-bottom: 20px;
   }
 }
