--- a/app/assets/stylesheets/questions.css.scss
+++ b/app/assets/stylesheets/questions.css.scss
@@ -154,7 +154,7 @@ h2 {
 dl#other {
   margin-top: 30px;
 
-  .howwrong {
+  .howwrong p {
     font-size: 48px;
   }
 
